ArcGIS Pro/Newham/GpMessages/26666130226670300
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: 2025年8月18日 16:07:51</msg><msg code="0" type="0">Adding cAI to Bus_5min_Accessibility...</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    5min_Bus_A/50
    ^
﻿SyntaxError: invalid decimal literal
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at 2025年8月18日 16:07:52 (Elapsed Time: 0.61 seconds)</msg></messages>